# ai-honeypot

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
dashboard/: auth.py  main.py  metrics.py  routes.py
dashboard/templates/: baits.html  base.html  ip_detail.html  live.html  settings.html  stats.html
honeypot/: bait.py  error_pages.py  link_token.py  main.py  rate_limit.py  routes.py  slowdown.py
honeypot/prompts/: api_json.j2  html_page.j2  index_scenarios.yaml  plain_text.j2
shared/: config.py  config_reload.py  db.py  llm.py  models.py  page_type.py  retention.py  ua.py
tests/: conftest.py  test_config.py  test_config_save_reload.py  test_dashboard_auth.py  test_dashboard_metrics.py  test_dashboard_routes.py  test_dashboard_settings.py  test_error_pages.py  test_honeypot_hot_reload.py  test_link_sanitizer.py  test_link_token.py  test_llm.py  test_models.py  test_page_type.py  test_rate_limit.py  test_retention.py  test_routes.py  test_ua.py
