[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["honeypot", "dashboard", "shared"]

[project]
name = "ai-honeypot"
version = "0.1.0"
description = "AI-driven self-hosted honeypot web with per-IP fog-of-war page generation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "redis>=5.2",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "prometheus-client>=0.21",
  "ua-parser>=0.18",
  "python-multipart>=0.0.12",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "fakeredis>=2.26",
  "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
